# ai_bites

./: .gitignore  Makefile  README.md  conftest.py  main.py  pyproject.toml
01_first_api_call/: exercise.md  reference.py  template.py  test_exercise.py
02_structured_output/: exercise.md  reference.py  template.py  test_exercise.py
03_system_prompt/: exercise.md  reference.py  template.py  test_exercise.py
04_multi_turn_chat/: exercise.md  reference.py  template.py  test_exercise.py
05_tool_use/: exercise.md  reference.py  template.py  test_exercise.py
06_provider_protocol/: exercise.md  reference.py  template.py  test_exercise.py
07_repository_pattern/: exercise.md  reference.py  template.py  test_exercise.py
08_service_layer/: exercise.md  reference.py  template.py  test_exercise.py
09_hitl/: exercise.md  reference.py  template.py  test_exercise.py
10_agent_loop/: exercise.md  reference.py  template.py  test_exercise.py
scripts/: progress.py
