[project]
name = "ai-bites"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ty>=0.0.35",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
